--- a/doc/ja/namazu.css
+++ b/doc/ja/namazu.css
@@ -1,4 +1,4 @@
-/* $Id: namazu.css,v 1.3 2000-02-06 09:43:43 satoru Exp $ */
+/* $Id: namazu.css,v 1.4 2000-02-06 10:26:28 satoru Exp $ */
 
 body { 
 	background-color: White; 
@@ -41,6 +41,11 @@ p.example {
 }
 
 code { 
+	color: Navy;
+	font-family: monospace; 
+}
+
+pre { 
 	color: Navy;
 	font-family: monospace; 
 }
